# Zephyr

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  ProjectOptions.cmake  doxyfile
.github/: constants.env
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake
includes/: CMakeLists.txt  ECS.hpp  Exception.hpp
includes/Core/: App.hpp  CMakeLists.txt  Clock.hpp  Core.hpp  SparseArray.hpp  TestPlugin.hpp  World.hpp
includes/Core/Events/: CMakeLists.txt  EventHandler.hpp  EventsManager.hpp
includes/Core/Libraries/: PluginLoader.hpp
includes/Core/Systems/: GenericSystem.hpp  System.hpp
scripts/: linux.sh  macos.sh
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  EventsManager.cpp  World.cpp
src/Core/Clock/: CMakeLists.txt  Clock.cpp
test/: CMakeLists.txt  tests.cpp
